--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/tools.css">
     <script src="js/index.js"></script>
-
+    <script src="js/Tween.js"></script>
 </head>
 <body>
     <header class="title_head">
@@ -21,7 +21,7 @@
     </header>
     <div id="cont_box">
         <ul class="cont_list">
-            <li>
+            <li class="list_item">
                 <div class="center section" id="home">
                     <img src="img/yangyang.jpg" id="su_img">
                     <h1>杨  洋</h1>
@@ -30,9 +30,37 @@
                 </div>
                 <div id="home_tri"></div>
             </li>
-            <li></li>
-            <li></li>
-            <li>
+            <li class="list_item"></li>
+            <li class="list_item">
+                <div class="center sectiont pr" id="opus">
+                    <div>
+                        <a href="javascript:;" title="点击在线查看">文件夹操作</a>
+                        <img src="img/op_1.jpg">
+                    </div>
+                    <div>
+                        <a href="javascript:;" title="点击在线查看">todolist</a>
+                        <img src="img/op_2.jpg">
+                    </div>
+                    <div>
+                        <a href="javascript:;" title="点击在线查看">商品预览</a>
+                        <img src="img/op_3.jpg">
+                    </div>
+                    <div>
+                        <a href="javascript:;" title="点击在线查看">拖拽、碰撞及拉伸</a>
+                        <img src="img/op_4.jpg">
+                    </div>
+                    <div>
+                        <a href="javascript:;" title="点击在线查看">click-game</a>
+                        <img src="img/op_5.jpg">
+                    </div>
+                    <div>
+                        <a href="javascript:;" title="点击在线查看">仿百度云</a>
+                        <img src="img/op_6.jpg">
+                    </div>
+                </div>
+                <a href="https://github.com/xingkong15920" id="det_box" target="-blank">更多小demo及作品,请点击</a>
+            </li>
+            <li class="list_item">
                 <div class="center sectiont" id="more">
                     <h1>了解更多</h1>
                     <h2>
