--- a/index.html
+++ b/index.html
@@ -30,7 +30,117 @@
                 </div>
                 <div id="home_tri"></div>
             </li>
-            <li class="list_item"></li>
+            <li class="list_item">
+                <div class="sectiont clearfix" id="skill">
+                    <ul id="ski_list" class="fl">
+                        <li class="ski_item">
+                            <span class="ski_ico"></span>
+                            <span class="ski_text">html5</span>
+                            <p>
+                                <span></span>
+                                熟练掌握各类语义化标签
+                            </p>
+                            <p>
+                                <span></span>
+                                熟悉对各种标签特性及其相互转换
+                            </p>
+                            <p>
+                                <span></span>
+                                H5拖拽、视频音频
+                            </p>
+                            <p>
+                                <span></span>
+                                表格，H5新增表单等……
+                            </p>
+                        </li>
+                        <li class="ski_item">
+                            <span class="ski_ico"></span>
+                            <span class="ski_text">css3</span>
+                            <p>
+                                <span></span>
+                                掌握浮动及文档流特性
+                            </p>
+                            <p>
+                                <span></span>
+                                精通定位、浏览器兼容性
+                            </p>
+                            <p>
+                                <span></span>
+                                CSS3圆角阴影字体等样式熟练使用
+                            </p>
+                            <p>
+                                <span></span>
+                                移动端响应式
+                            </p>
+                            <p>
+                                <span></span>
+                                熟悉canvas动画绘图
+                            </p>
+                        </li>
+                        <li class="ski_item">
+                            <span class="ski_ico"></span>
+                            <span class="ski_text">javascript</span>
+                            <p>
+                                <span></span>
+                                了解数据类型、作用域闭包等语言特性
+                            </p>
+                            <p>
+                                <span></span>
+                                掌握定时器、数组字符串及递归、数组去重等
+                            </p>
+                            <p>
+                                <span></span>
+                                掌握JS的数据调用、ajax实现机制、各类接口调用
+                            </p>
+                            <p>
+                                <span></span>
+                                熟悉面向对象编程，对封装、继承、多态等均有了解
+                            </p>
+                            <p>
+                                <span></span>
+                                了解正则表达式，熟悉JS兼容性、JS性能提升
+                            </p>
+                        </li>
+                    </ul>
+                    <ul id="ski_box" class="fl">
+                        <li class="ski_box_html">
+                            html5
+                        </li>
+                        <li class="ski_box_css">
+                            css3
+                        </li>
+                        <li class="ski_box_js">
+                            javascript
+                        </li>
+                    </ul>
+                    <div class="fr" id="frame">
+                        <h2>
+                            <span class="ski_ico"></span>
+                            <span class="ski_text">框架及其他</span>
+                        </h2>
+                        <p>
+                            <span></span>
+                            熟练使用Photoshop、atom等前端工具
+                        </p>
+                        <p>
+                            <span></span>
+                            熟悉基于node.js的express、mongodb等框架
+                        </p>
+                        <p>
+                            <span></span>
+                            对前端OOP、MVC有一定认识
+                        </p>
+                        <p>
+                            <span></span>
+                            熟悉React框架
+                        </p>
+                        <p>
+                            <span></span>
+                            熟悉Bootstrap、jquery等前端常用框架
+                        </p>
+                    </div>
+                </div>
+            </li>
             <li class="list_item">
                 <div class="center sectiont pr" id="opus">
                     <div>
