--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <div class="center section" id="home">
                     <img src="img/yangyang.jpg" id="su_img">
                     <h1>杨  洋</h1>
-                    <p id="sub_text">热衷于原生JavaScript学习</p>
-                    <p>初级前端工程师</p>
+                    <p id="sub_text">热衷于原生 JavaScript 学习</p>
+                    <p>前端开发工程师</p>
                 </div>
                 <div id="home_tri"></div>
             </li>
@@ -35,27 +35,27 @@
                     <ul id="ski_list" class="fl">
                         <li class="ski_item">
                             <span class="ski_ico"></span>
-                            <span class="ski_text">html5</span>
+                            <span class="ski_text">HTML</span>
                             <p>
                                 <span></span>
                                 熟练掌握各类语义化标签
                             </p>
                             <p>
                                 <span></span>
-                                熟悉对各种标签特性及其相互转换
+                                熟悉 HTML5 官方标准
                             </p>
                             <p>
                                 <span></span>
-                                H5拖拽、视频音频
+                                熟悉 jpg/gif/png 等图片格式的优缺点
                             </p>
                             <p>
                                 <span></span>
-                                表格，H5新增表单等……
+                                表格，HTML5 新增表单等……
                             </p>
                         </li>
                         <li class="ski_item">
                             <span class="ski_ico"></span>
-                            <span class="ski_text">css3</span>
+                            <span class="ski_text">CSS</span>
                             <p>
                                 <span></span>
                                 掌握浮动及文档流特性
@@ -66,20 +66,20 @@
                             </p>
                             <p>
                                 <span></span>
-                                CSS3圆角阴影字体等样式熟练使用
+                                CSS3 圆角阴影字体等样式熟练使用
                             </p>
                             <p>
                                 <span></span>
-                                移动端响应式
+                                熟悉移动端响应式及预处理器less使用
                             </p>
                             <p>
                                 <span></span>
-                                熟悉canvas动画绘图
+                                熟悉 canvas 动画绘图
                             </p>
                         </li>
                         <li class="ski_item">
                             <span class="ski_ico"></span>
-                            <span class="ski_text">javascript</span>
+                            <span class="ski_text">Javascript</span>
                             <p>
                                 <span></span>
                                 了解数据类型、作用域闭包等语言特性
@@ -120,23 +120,23 @@
                         </h2>
                         <p>
                             <span></span>
-                            熟练使用Photoshop、atom等前端工具
+                            熟练使用 Photoshop、atom 等前端工具
                         </p>
                         <p>
                             <span></span>
-                            熟悉基于node.js的express、mongodb等框架
+                            熟悉基于 node.js 的 express、mongodb 等框架
                         </p>
                         <p>
                             <span></span>
-                            对前端OOP、MVC有一定认识
+                            对前端 OOP、MVC 有一定认识
                         </p>
                         <p>
                             <span></span>
-                            熟悉React框架
+                            熟悉 React 框架
                         </p>
                         <p>
                             <span></span>
-                            熟悉Bootstrap、jquery等前端常用框架
+                            熟悉 Bootstrap、jquery 等前端常用框架
                         </p>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                         <img src="img/op_1.jpg">
                     </div>
                     <div>
-                        <a href="javascript:;" title="点击在线查看">todolist</a>
+                        <a href="http://xingkong920.com/todolist/" title="点击在线查看">todolist</a>
                         <img src="img/op_2.jpg">
                     </div>
                     <div>
@@ -156,11 +156,11 @@
                         <img src="img/op_3.jpg">
                     </div>
                     <div>
-                        <a href="javascript:;" title="点击在线查看">拖拽、碰撞及拉伸</a>
+                        <a href="http://xingkong920.com/drag/" title="点击在线查看">拖拽、碰撞及拉伸</a>
                         <img src="img/op_4.jpg">
                     </div>
                     <div>
-                        <a href="javascript:;" title="点击在线查看">click-game</a>
+                        <a href="http://xingkong920.com/click-game/" title="点击在线查看">click-game</a>
                         <img src="img/op_5.jpg">
                     </div>
                     <div>
@@ -168,7 +168,7 @@
                         <img src="img/op_6.jpg">
                     </div>
                 </div>
-                <a href="https://github.com/xingkong15920" id="det_box" target="-blank">更多小demo及作品,请点击</a>
+                <a href="https://github.com/xingkong15920" id="det_box" target="-blank">更多小 demo 及作品,请点击</a>
             </li>
             <li class="list_item">
                 <div class="center sectiont" id="more">
