--- a/index.html
+++ b/index.html
@@ -10,14 +10,26 @@
     <link rel="stylesheet" href="css/tools.css">
     <script src="js/index.js"></script>
     <script src="js/Tween.js"></script>
+    <script>
+        console.log(document.onreadystatechange);
+    </script>
 </head>
 <body>
+    <div id="load_box"></div>
     <header class="title_head">
-        <a href="javascript:;">基本信息</a>
-        <a href="javascript:;">掌握技能</a>
-        <a href="javascript:;">个人作品</a>
-        <a href="javascript:;">联系方式</a>
-        <span id="tri"></span>
+        <div id="head_top">
+            <a href="javascript:;">基本信息</a>
+            <a href="javascript:;">掌握技能</a>
+            <a href="javascript:;">个人作品</a>
+            <a href="javascript:;">联系方式</a>
+            <span id="tri"></span>
+        </div>
+        <div id="head_bot">
+            <a href="javascript:;">基本信息</a>
+            <a href="javascript:;">掌握技能</a>
+            <a href="javascript:;">个人作品</a>
+            <a href="javascript:;">联系方式</a>
+        </div>
     </header>
     <div id="cont_box">
         <ul class="cont_list">
