--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
                     </ul>
                     <ul id="ski_box" class="fl">
                         <li class="ski_box_html">
-                            html5
+                            HTML
                         </li>
                         <li class="ski_box_css">
-                            css3
+                            CSS
                         </li>
                         <li class="ski_box_js">
-                            javascript
+                            Javascript
                         </li>
                     </ul>
                     <div class="fr" id="frame">
@@ -144,11 +144,7 @@
                         </p>
                         <p>
                             <span></span>
-                            熟悉 React 框架
-                        </p>
-                        <p>
-                            <span></span>
-                            熟悉 Bootstrap、jquery 等前端常用框架
+                            熟悉 Bootstrap、Jquery、React 等前端常用框架
                         </p>
                     </div>
                 </div>
