--- a/index.html
+++ b/index.html
@@ -113,6 +113,26 @@
                                 了解正则表达式，熟悉JS兼容性、JS性能提升
                             </p>
                         </li>
+                        <li class="ski_item ski_au">
+                            <span class="ski_ico"></span>
+                            <span class="ski_text">框架及其他</span>
+                            <p>
+                                <span></span>
+                                熟练使用 Photoshop、atom 等前端工具
+                            </p>
+                            <p>
+                                <span></span>
+                                熟悉基于 node.js 的 express、mongodb 等框架
+                            </p>
+                            <p>
+                                <span></span>
+                                对前端 OOP、MVC 有一定认识
+                            </p>
+                            <p>
+                                <span></span>
+                                熟悉 Bootstrap、Jquery、React 等前端常用框架
+                            </p>
+                        </li>
                     </ul>
                     <ul id="ski_box" class="fl">
                         <li class="ski_box_html">
