--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                         <a href="javascript:;">18230201805  18501144303</a>
                     </p>
                     <h2>
-                        <a href="resume.pdf">下载简历</a>
+                        <a href="resume.pdf" target="-blank">下载简历</a>
                     </h2>
                 </div>
                 <div id="home_tri"></div>
