--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <img src="img/op_1.jpg">
                     </div>
                     <div>
-                        <a href="http://xingkong920.com/todolist/" title="点击在线查看">todolist</a>
+                        <a href="http://xingkong920.com/todolist/" title="点击在线查看" target="_blank">todolist</a>
                         <img src="img/op_2.jpg">
                     </div>
                     <div>
@@ -181,11 +181,11 @@
                         <img src="img/op_3.jpg">
                     </div>
                     <div>
-                        <a href="http://xingkong920.com/drag/" title="点击在线查看">拖拽、碰撞及拉伸</a>
+                        <a href="http://xingkong920.com/drag/" title="点击在线查看" target="_blank">拖拽、碰撞及拉伸</a>
                         <img src="img/op_4.jpg">
                     </div>
                     <div>
-                        <a href="http://xingkong920.com/click-game/" title="点击在线查看">click-game</a>
+                        <a href="http://xingkong920.com/click-game/" title="点击在线查看" target="_blank">click-game</a>
                         <img src="img/op_5.jpg">
                     </div>
                     <div>
@@ -193,15 +193,15 @@
                         <img src="img/op_6.jpg">
                     </div>
                 </div>
-                <a href="https://github.com/xingkong15920" id="det_box" target="-blank">更多小 demo 及作品,请点击</a>
+                <a href="https://github.com/xingkong15920" id="det_box" target="_blank">更多小 demo 及作品,请点击</a>
             </li>
             <li class="list_item">
                 <div class="center sectiont" id="more">
                     <h1>了解更多</h1>
                     <h2>
-                        <a href="https://github.com/xingkong15920" target="-blank">github地址</a>
+                        <a href="https://github.com/xingkong15920" target="_blank">github地址</a>
                         |
-                        <a href="http://weibo.com/2287191961/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1" target="-blank">新浪微博</a>
+                        <a href="http://weibo.com/2287191961/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1" target="_blank">新浪微博</a>
                     </h2>
                     <p>
                         Email:
@@ -212,7 +212,7 @@
                         <a href="javascript:;">18230201805  18501144303</a>
                     </p>
                     <h2>
-                        <a href="resume.pdf" target="-blank">下载简历</a>
+                        <a href="resume.pdf" target="_blank">下载简历</a>
                     </h2>
                 </div>
                 <div id="home_tri"></div>
